--- a/RAF3/raf3/index.html
+++ b/RAF3/raf3/index.html
@@ -27,9 +27,7 @@
       <main class="row">
         <aside class="send col-12 col-lg-3">
           <form  action="/" method="post" enctype="multipart/form-data">
-          <p>
-          Formulaire d'envoi de fichier :<br><br>
-          <label for="monfichier">Selectionne le document</label><br>
+          <p><br><br>
           <input type="file" id="file" name="file" required="required"/><br>
           <br>
           <label for="matiere">Matière</label>
@@ -51,10 +49,10 @@
           <input type="radio" id="exam" name="categorie" value="exam"><br>
           <br>
           <label for="com">Commentaire:</label><br>
-            <textarea id="com" name="com"></textarea><br><br>
+            <textarea id="com" name="com" cols="30"></textarea><br><br>
           <input type="submit" id="upld" value="Envoyer !" />
 	  <br><br>
-	  <input type="submit" id="cancel" value="Annuler" />
+	  <input type="reset" id="cancel" value="Annuler !" />
           </p>
           </form>
         </aside>
