--- a/RAF3/raf3/index.html
+++ b/RAF3/raf3/index.html
@@ -25,6 +25,12 @@
         </div>
       </header>
       <main class="row">
+
+        <label class="switch">
+          <input type="checkbox">
+          <span class="slider round"></span>
+        </label>
+
         <aside class="send col-12 col-lg-3">
           <form  action="/" method="post" enctype="multipart/form-data">
           <p><br><br>
